[package]
name = "rust-zexp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
log = "0.4.17"
rayon = "1.7.0"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
simplelog = "0.12.1"
toml = "0.7.3"
wait-timeout = "0.2.0"
